Bug 516973 - Mismatch between Cairo and Thebes surface types. r=jmuizelaar